--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -10,7 +10,7 @@
   }
   
   .node-start {
-    background-color: green;
+    background-color: black;
   }
   
   .node-visited {
@@ -64,7 +64,7 @@
   @keyframes shortestPath {
     0% {
       transform: scale(0.6);
-      background-color: rgb(255, 254, 106);
+      background-color: rgb(72, 167, 28);
     }
   
     50% {
